# parallel-programming-tasks

./: .gitignore  README.md  t.cpp
task1-integral/: task1-integral.cpp
task3-hash/: CMakeLists.txt
task3-hash/src/: task3-hash.cpp
task4-distribution/: CMakeLists.txt
task4-distribution/src/: task4-distribution.cpp
task6-primes/: CMakeLists.txt  task6-primes.cpp
task6-primes/includes/: prime.h
task6-primes/src/: prime.cpp  task6-primes.cpp
